--- a/gpt_clone_dev.ipynb
+++ b/gpt_clone_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +206,163 @@
     "    context = x[:t+1]\n",
     "    target = y[t]\n",
     "    print(f'Input: {context}, Output: {target}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs: \n",
+      "torch.Size([4, 8])\n",
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n",
+      "Targeta\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
+      "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
+      "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
+      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n",
+      "-------\n",
+      "Input: [24], Target: 43\n",
+      "Input: [24, 43], Target: 58\n",
+      "Input: [24, 43, 58], Target: 5\n",
+      "Input: [24, 43, 58, 5], Target: 57\n",
+      "Input: [24, 43, 58, 5, 57], Target: 1\n",
+      "Input: [24, 43, 58, 5, 57, 1], Target: 46\n",
+      "Input: [24, 43, 58, 5, 57, 1, 46], Target: 43\n",
+      "Input: [24, 43, 58, 5, 57, 1, 46, 43], Target: 39\n",
+      "Input: [44], Target: 53\n",
+      "Input: [44, 53], Target: 56\n",
+      "Input: [44, 53, 56], Target: 1\n",
+      "Input: [44, 53, 56, 1], Target: 58\n",
+      "Input: [44, 53, 56, 1, 58], Target: 46\n",
+      "Input: [44, 53, 56, 1, 58, 46], Target: 39\n",
+      "Input: [44, 53, 56, 1, 58, 46, 39], Target: 58\n",
+      "Input: [44, 53, 56, 1, 58, 46, 39, 58], Target: 1\n",
+      "Input: [52], Target: 58\n",
+      "Input: [52, 58], Target: 1\n",
+      "Input: [52, 58, 1], Target: 58\n",
+      "Input: [52, 58, 1, 58], Target: 46\n",
+      "Input: [52, 58, 1, 58, 46], Target: 39\n",
+      "Input: [52, 58, 1, 58, 46, 39], Target: 58\n",
+      "Input: [52, 58, 1, 58, 46, 39, 58], Target: 1\n",
+      "Input: [52, 58, 1, 58, 46, 39, 58, 1], Target: 46\n",
+      "Input: [25], Target: 17\n",
+      "Input: [25, 17], Target: 27\n",
+      "Input: [25, 17, 27], Target: 10\n",
+      "Input: [25, 17, 27, 10], Target: 0\n",
+      "Input: [25, 17, 27, 10, 0], Target: 21\n",
+      "Input: [25, 17, 27, 10, 0, 21], Target: 1\n",
+      "Input: [25, 17, 27, 10, 0, 21, 1], Target: 54\n",
+      "Input: [25, 17, 27, 10, 0, 21, 1, 54], Target: 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "batch_size = 4  # how many independent sequences will process in parallel\n",
+    "block_size = 8  # what is the maximum context length for predictions\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    # generate a small batch of data of inputs x and targets y\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint (len(data) - block_size, (batch_size, )) \n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    return x,y\n",
+    "\n",
+    "xb, yb = get_batch('train')\n",
+    "print('Inputs: ')\n",
+    "print(xb.shape)\n",
+    "print(xb)\n",
+    "print(\"Targeta\")\n",
+    "print(yb.shape)\n",
+    "print(yb)\n",
+    "print('-------')\n",
+    "\n",
+    "for b in range(batch_size):\n",
+    "    for t in range(block_size):\n",
+    "        context = xb[b, :t+1]\n",
+    "        target = yb[b, t]\n",
+    "        print(f'Input: {context.tolist()}, Target: {target}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(xb) # out input to the transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 65])\n",
+      "tensor(4.8786, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
+    "torch.manual_seed(1337)\n",
+    "\n",
+    "\n",
+    "class BigramLanguageModel(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        # each token directly reads off the logits for the next token from a lookup table\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "    \n",
+    "    def forward(self, idx, targets):\n",
+    "\n",
+    "        #idx  and targets are both (B,T) tensor of integers\n",
+    "        # B = Batch     (4)\n",
+    "        # T = Time      (8)\n",
+    "        # C = Channel   (vocab_size = 65)\n",
+    "        logits = self.token_embedding_table(idx)    #(B,T,C) tensor\n",
+    "\n",
+    "        B,T,C = logits.shape\n",
+    "        logits = logits.view(B*T, C)\n",
+    "        targets = targets.view(B*T)\n",
+    "\n",
+    "        # Measuring loss -log likelyhood loss function\n",
+    "        # Logits are the outputs of a neural network before the activation function is applied\n",
+    "        loss = F.cross_entropy(logits, targets)\n",
+    "        return logits, loss\n",
+    "\n",
+    "m = BigramLanguageModel(vocab_size)\n",
+    "logits, loss = m(xb,yb)\n",
+    "print(logits.shape)\n",
+    "print(loss)\n"
    ]
   },
   {
